--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Ignore bundler config.
 /.bundle
 
+# Ignore Braintree keys
+/config/application.yml
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
