create a plan and a product for the subscription

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -1,5 +1,6 @@
 development:
   stripe:
+    premium_plan_id: premium-monthly
     publishable_key: pk_test_iodjRiA9OzTNpXpsiIKw07wm00DXI6uf7H
     secret_key: sk_test_ujWZKkuGgPqUGYecr1uwQCOr007CVZfgaV
 
